--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "atom-space-pen-views": "^2.1.0",
     "fs-plus": "^2.8.1",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "season": "^5.3.0"
   }
 }
