--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meteor-assist",
-  "main": "./lib/meteor-assist",
+  "main": "./lib/main",
   "version": "0.1.0",
   "description": "Create meteor (html) / (js, coffee) / (css, less) files with ease",
   "keywords": [],
