Did the Generate Template Modal Panel List View

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Create meteor (html) / (js, coffee) / (css, less) files with ease",
   "keywords": [],
   "activationCommands": {
-    ".tree-view": "meteor-assist:toggle",
+    ".tree-view": "meteor-assist:toggle-template-generator",
     "atom-workspace": "meteor-assist:toggle-settings-view"
   },
   "repository": "https://github.com/sdinesh86/meteor-assist",
