Revert "temp checkout"
This reverts commit 87b0cde723f790bca847b11a2d3fbfec76a87411.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meteor-assist",
-  "main": "./lib/main",
+  "main": "./lib/meteor-assist",
   "version": "0.1.0",
   "description": "Create meteor (html) / (js, coffee) / (css, less) files with ease",
   "keywords": [],
